[DEVREL-3759] : Add GitHub OAuth sample app for Freshdesk in the workshop material which is built via Freddy Copilot for Developers

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#fdk
+
 .DS_Store
-.report.json
-coverage*
-.fdk
+**/.fdk/**
+**/coverage/**
+**/.report.json
+**/.vscode/**
+**/node_modules/**
+**/test_data/**
+.idea
+**/dist/**
+**/log/**
+config/oauth_config.json
